# Configurator

./: BinSerializer.sln  BinSerializerTest.cpp  Optional.h  README.md  TODO.txt  TestConfig.cpp  TestConfig.h  configurator.cpp  configurator.h  configurator.sln  configurator_vs2005.vcproj  file.txt
Configurator/: Optional.h  configurator.cpp  configurator.h  type_traits_helper.h
Test/: .gitignore  Makefile  TODO.txt  TestConfig.cpp  TestConfig.h  TestConfig2.cpp  testOptional.cpp
pi314_folders/programming/CPROG/tools/configurator/: BinSerializer.cpp  BinSerializer.h  BinSerializer.vcxproj  BinSerializerAlt.h  BinSerializerTest.cpp  Optional.h  TestConfig.cpp  TestConfig.h  configurator.cpp  configurator.h  configurator.sln  configurator.vcxproj  configurator_vs2005.sln  file.txt  file2.txt
pi314_folders/programming/CPROG/tools/configurator/Configurator/: configurator.cpp  configurator.h
pi314_folders/programming/CPROG/tools/configurator/Test/: Makefile  TestConfig.cpp  TestConfig2.cpp  configurator.vcxproj  testOptional.cpp
tests/: .gitignore  CMakeLists.txt  Makefile  TestConfig.cpp  TestConfig.h  TestConfig2.cpp  TestConfig3.cpp  configurator.vcxproj  configurator.vcxproj.filters  file.txt  runtests.sh  testOptional.cpp
